# ShiftOps

./: .env.example  .gitignore  CLAUDE.md  DEPLOY_NEXT_STEPS.md  Makefile  README.md  fly_logs_2026-05-08.txt  package-lock.json  package.json  render.yaml  Текстовый документ.txt
apps/api/: .dockerignore  .gitattributes  Dockerfile  alembic.ini  fly.toml  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260427_0001_initial_schema.py  20260427_0002_score_formula_version.py  20260428_0003_force_row_level_security.py  20260428_0005_invites_owner_and_system_created.py  20260429_0004_invites.py  20260429_0006_template_section_and_recurrence.py  20260429_0007_bartender_role_org_business_hours.py  20260429_0008_task_instance_obsolete_status.py  20260429_0009_shift_handover_summary.py  20260429_0010_rls_bypass_role.py  20260501_0011_grant_rls_bypass_membership.py  20260502_0012_bypass_pooler_grants.py  20260502_0012_grant_rls_bypass_pooler_roles.py  20260502_0013_organization_soft_delete.py  20260502_0014_users_job_title.py  20260502_0015_claim_slots_and_unassigned_pool.py  20260502_0015_claim_slots_pool.py  20260503_0016_delay_reason_swap.py  20260508_0017_violation_reason.py  20260518_0018_org_notification_prefs.py
apps/api/deploy/: supervisord-failfast.sh  supervisord.conf
apps/api/scripts/: enable_admin_autoshifts.py  seed.py  seed_plovkhana_templates.py  smoke_pilot.py
apps/api/shiftops_api/: __init__.py  main.py
apps/api/shiftops_api/api/: domain_http.py  errors.py
apps/api/shiftops_api/api/v1/: analytics.py  audit.py  auth.py  invites.py  locations.py  media.py  organization.py  realtime.py  router.py  schedule.py  shifts.py  team.py  telegram.py  templates.py
apps/api/shiftops_api/application/: audit.py
apps/api/shiftops_api/application/analytics/: __init__.py  overview.py
apps/api/shiftops_api/application/auth/: deps.py  exchange_init_data.py  refresh_access.py
apps/api/shiftops_api/application/invites/: __init__.py  create_invite.py  create_system_invite.py  redeem_invite.py
apps/api/shiftops_api/application/media/: get_media_url.py
apps/api/shiftops_api/application/monitor/: __init__.py  active_shifts.py  checklist_overdue_tick.py  vacant_at_risk_shifts.py  vacant_before_start_alert_tick.py
apps/api/shiftops_api/application/organizations/: __init__.py  business_hours_config.py  business_hours_settings.py  create_organization.py  delete_organization.py  notification_prefs_config.py  notification_prefs_settings.py  resolve_org_spec.py
apps/api/shiftops_api/application/schedule/: __init__.py  import_csv.py
apps/api/shiftops_api/application/shifts/: abort_open_shifts_for_operator.py  approve_waiver.py  claim_role.py  claim_shift.py  close_shift.py  complete_task.py  complete_tasks_batch.py  geo.py  list_available_shifts.py  list_history.py  list_my_scheduled.py  list_my_shift.py  request_waiver.py  start_shift.py  swap_link_preview.py  swap_shift_requests.py
apps/api/shiftops_api/application/team/: __init__.py  change_member_role.py  deactivate_member.py  permissions.py
apps/api/shiftops_api/application/templates/: __init__.py  bulk_parser.py  delete_template.py  dtos.py  get_template.py  list_templates.py  recurrence.py  recurring_shifts_tick.py  save_template.py
apps/api/shiftops_api/config/: production_guard.py  settings.py
apps/api/shiftops_api/domain/: entities.py  enums.py  result.py  score.py  timezone.py
apps/api/shiftops_api/infra/: logging.py  metrics.py  queue.py  sentry.py
apps/api/shiftops_api/infra/antifake/: __init__.py  luminance.py  phash.py
apps/api/shiftops_api/infra/auth/: __init__.py  jwt_service.py
apps/api/shiftops_api/infra/db/: __init__.py  base.py  column_types.py  engine.py  mixins.py  rls.py
apps/api/shiftops_api/infra/notifications/: dispatcher.py  rate_limit.py  tasks.py
apps/api/shiftops_api/infra/realtime/: __init__.py  event_bus.py
apps/api/shiftops_api/infra/scheduling/: __init__.py  tasks.py
apps/api/shiftops_api/infra/storage/: __init__.py  interface.py  provider.py  r2_storage.py  telegram_storage.py
apps/api/tests/: conftest.py  test_analytics_overview.py  test_antifake_phash.py  test_asyncpg_pooler_connect_args.py  test_bulk_parser.py  test_business_hours_config.py  test_change_member_role_rules.py  test_claim_role.py  test_cors.py  test_deactivate_member_rules.py  test_history_filters.py  test_init_data.py  test_jwt_service.py  test_production_guard.py  test_recurrence_config.py  test_recurring_shifts_tick.py  test_rls_isolation.py  test_score_formula.py  test_swap_shift_create.py  test_templates_validation.py
docs/: AUTH_FLOW.md  (+17 more)
(+125 files in other folders)
