[project]
name = "shiftops-api"
version = "0.1.0"
description = "ShiftOps API — operational shift control SaaS for HoReCa."
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "psycopg[binary]>=3.2.0",
    "alembic>=1.14.0",
    "python-jose[cryptography]>=3.3.0",
    "aiogram>=3.13.0",
    "taskiq>=0.11.0",
    "taskiq-redis>=1.0.0",
    "redis>=5.2.0",
    "httpx>=0.28.0",
    "structlog>=24.4.0",
    "sentry-sdk[fastapi]>=2.18.0",
    "Pillow>=11.0.0",
    "imagehash>=4.3.1",
    "python-multipart>=0.0.18",
    "prometheus-client>=0.21.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "asgi-lifespan>=2.1.0",
    "freezegun>=1.5.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shiftops_api"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "B", "UP", "N", "SIM", "C4", "RUF", "ASYNC", "S", "PL", "TID",
]
ignore = [
    "S101",  # asserts in tests are fine
    "PLR0913",  # too-many-arguments triggers a lot in DI signatures
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S", "PLR2004"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers --tb=short"
markers = [
    "integration: requires postgres + redis",
]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["alembic/versions"]
